# Delve

./: .delve.json  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  TASK_PLAN.md  plan.md
.github/DISCUSSION_TEMPLATE/: q-a.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/delve-core/: Cargo.toml
crates/delve-core/src/: config.rs  duplicates.rs  giant_funcs.rs  graph.rs  health.rs  lib.rs  main.rs  parser.rs  progress.rs  report.rs  risks.rs  unused.rs  unused_deps.rs
test-fixtures/v2/: A.ts  B.ts  barrel.ts  circ_a.ts  circ_b.ts  consumer.ts  entry.ts  near_dup_a.ts  near_dup_b.ts  package.json  type_consumer.ts  types.ts  wildcard_a.ts  wildcard_b.ts  wildcard_consumer.ts
test-fixtures/vibe-app/: package.json
test-fixtures/vibe-app/src/: index.ts
test-fixtures/vibe-app/src/components/: Dashboard.tsx
test-fixtures/vibe-app/src/hooks/: useScroll.ts
test-fixtures/vibe-app/src/utils/: formatDate.ts
