[package]
name = "delve-core"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "glimpse"
path = "src/main.rs"

[dependencies]
tree-sitter = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-traversal = "0.1"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
yansi = "1"
walkdir = "2"
ignore = "0.4"
indicatif = "0.17"

